<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="stProduction" Id="{396dcd5c-6502-03b7-2b52-7e9212e5874d}">
    <Declaration><![CDATA[TYPE stProduction :
STRUCT
	

	ok_pieces : INT := 0;
	
	nok_pieces : INT := 0;
	
	start : BOOL;
	
	{attribute addProperty Name "<#Integer From PLC#>"}	
	progress_bar_value : INT;
	{attribute addProperty Name "<#Bool From PLC#>"}	
    progress_bar_status : BOOL;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>